crates/tesshir/tests/fixtures/check/interface_as_value_type.tess
interface Reader {
    fn read(self: &Self) -> i32;
}

fn bad(x: Reader) -> i32 {
    0
}
